# speedylemon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SPEEDOMETER.md  debug.sh  flake.nix  justfile  mumble.py  run.sh  shell.nix  toolchain.toml
beetlerank/: Cargo.toml  api.js  index.js  package.json
beetlerank-testsite/: .gitignore  api.js  package-lock.json
beetlerank/src/: lib.rs
data/courses/: DI Haiju 500.csv  EVENT Divinitys Reach.csv  EVENT Dragon Bash.csv  EVENT Lunar New Year.csv  EVENT Mad Kings Raceway.csv  TYRIA GROTHMAR VALLEY.csv  TYRIA INF.LEAP.csv  TYRIA ROLLING IN THE DEEP.csv
data/custom_courses/: created-course.csv
data/logs/: EVENT Dragon Bash-2024-06-04 21:02:36.815240700 UTC.csv  EVENT Dragon Bash-2024-06-04 21:09:00.917563600 UTC.csv  EVENT Dragon Bash-2024-06-04 21:20:46.374649800 UTC.csv  EVENT Dragon Bash-69035.csv  EVENT Dragon Bash_1717562318.csv  EVENT Dragon Bash_1717563874.csv  EVENT Dragon Bash_1717564135.csv  EVENT Dragon Bash_1717564306.csv  EVENT Dragon Bash_1717566832.csv  EVENT Dragon Bash_1717566997.csv  EVENT Dragon Bash_1717567164.csv  EVENT Dragon Bash_65745.csv  EVENT Dragon Bash_67577.csv  EVENT Dragon Bash_67857.csv  EVENT Dragon Bash_69641.csv  EVENT Dragon Bash_73367.csv  TYRIA DIESSA PLATEAU.csv
data/logs/custom_courses/: created-course.csv  diessa plateau log hopper.csv
data/maps/custom_courses/: created-course.csv
data/splits/: EVENT Dragon Bash.toml  TYRIA DIESSA PLATEAU.toml
data/splits/custom_courses/: created-course.toml  diessa plateau log hopper.toml
feotui/: Cargo.toml
feotui/src/: lib.rs  stateful_list.rs  util.rs  window.rs
maps/: DI Roller Coaster Tycoon.csv  JP-10 Mad Kings Clock Tower.csv  PK Ahvenisto - Racing Circuit.csv  PK Batangas - Racing Circuit.csv  TYRIA BRISBAN WILD..csv  TYRIA GENDARRAN.csv  TYRIA SNOWDEN DRIFTS.csv
maps/DYERS CUP/: DI Roller Coaster Raceway.csv
maps/RAEVENCUP/: 01-development.csv
scripts/: cargotest.sh
speedometer/: Cargo.toml
speedometer/src/: course.rs  lib.rs  racer.rs  splits.rs
src/: app.rs  basictui.rs  beetlerank.rs  camera.rs  checkpoint.rs  checkpoint_handler.rs  course.rs  guild_wars_handler.rs  lemontui.rs  livesplit_handler.rs  main.rs  racelog.rs  racer.rs  speedometer.rs  speedylemon.rs  splits.rs  testprogram.rs  track_selector.rs  util.rs
src/beetlerank/: mod.rs
src/lemontui/: mod.rs  speedometer.rs  track_selector.rs  tui_utils.rs
src/speedometer/: course.rs  guild_wars_handler.rs  mod.rs  racelog.rs  splits.rs  util.rs
