[package]
name = "speedylemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
crossbeam-channel = "0.5.8"
crossterm = "0.27.0"
csv = "1.3.0"
ctrlc = "3.4.1"
device_query = "1.1.3"
enigo = "0.1.3"
itertools = "0.12.0"
log = { version = "0.4.20", features = ["release_max_level_off"]}
mumblelink_reader = "0.3.5"
pretty_env_logger = "0.5.0"
ratatui = "0.24.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
toml = "0.8.8"
