[package]
name = "speedylemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
crossbeam-channel = "0.5.8"
crossterm = "0.27.0"
csv = "1.3.0"
enigo = "0.1.3"
itertools = "0.12.0"
log = { version = "0.4.20", features = ["release_max_level_off"]}
mumblelink_reader = "0.3.5"
pretty_env_logger = "0.5.0"
ratatui = "0.24.0"
reqwest = {version = "0.11.23", features = ["blocking", "json", "rustls-tls-native-roots"]}
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
thiserror = "1.0.50"
toml = "0.8.8"
futures = "0.3.30"
tokio = {version = "1.38.0", features = ["full"]}
colored = "2.1.0"
feotui = { path = "./feotui" }
textwrap = "0.16.1"
unicode-segmentation = "1.11.0"