[package]
name = "speedylemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-gnu"]

[dependencies]
anyhow = "1.0.76"
crossbeam-channel = "0.5.8"
crossterm = "0.27.0"
csv = "1.3.0"
enigo = "0.1.3"
itertools = "0.12.0"
log = { version = "0.4.20", features = ["release_max_level_off"]}
env_logger = "0.10"
mumblelink_reader = "0.3.5"
pretty_env_logger = "0.5.0"
ratatui = "0.24.0"
reqwest = {version = "0.11.23", features = ["blocking", "json", "rustls-tls-native-roots", "multipart"]}
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
thiserror = "1.0.50"
toml = "0.8.8"
futures = "0.3.30"
tokio = {version = "1.38.0", features = ["full"]}
feotui = { path = "./feotui" }
textwrap = "0.16.1"
unicode-segmentation = "1.11.0"
chrono = "0.4.38"
beetlerank = { path = "./beetlerank" }
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }