[package]
name = "beetlerank"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
futures = "0.3.30"
reqwest = {version = "0.11.23", features = ["blocking", "json", "rustls-tls-native-roots"]}
log = { version = "0.4.20", features = ["release_max_level_off"]}