[package]
name = "beetlerank"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.3.1"
itertools = "0.12.0"
futures = "0.3.30"
reqwest = {version = "0.11.23", features = ["blocking", "json", "rustls-tls-native-roots", "multipart"]}