[package]
name = "speedometer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
anyhow = "1.0.76"
log = { version = "0.4.20", features = ["release_max_level_off"]}
mumblelink_reader = "0.3.5"
reqwest = {version = "0.11.23", features = ["blocking", "json", "rustls-tls-native-roots"]}
csv = "1.3.0"
toml = "0.8.8"
feotui = { path = "../feotui" }